# maximal-ai

./: .gitignore  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  HOWTO.md  META_LEARNINGS.md  README.md  REPOMAP.yaml  extension_guide.md  install.sh  pyproject.toml  setup.sh  test-installation.sh  test_improvement_plan.md
.claude/: settings.json
.claude/agents/: architecture-pattern-detector.md  bug-hunter.md  code-simplifier.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  file-analyzer.md  scalability-assessor.md  test-runner.md  thoughts-locator.md  tradeoff-researcher.md  web-search-researcher.md
.claude/commands/: address-review.md  architecture-review.md  blocked.md  commit-push-pr.md  create_handoff.md  design-system.md  epic-oneshot.md  implement.md  observe-docstrings.md  plan.md  research.md  resume_handoff.md  review-pr.md  review.md  standup.md  test-and-fix.md  tradeoff-analysis.md  verify.md
.claude/hooks/: auto-format.sh  commit-thoughts.sh  detect-username.sh  post-edit.sh  pre-commit-check.sh  session-complete.sh
.github/workflows/: test-commands.yml  test.yml
installers/: common.sh  rdf-framework.sh  rpi-workflow.sh
research/: 2025-09-30-data-analysis-integration-feasibility.md  2025-10-04-research-command-failure.md
src/rdf/: __init__.py  cli.py
templates/: testing.md
tests/: __init__.py  conftest.py
tests/commands/: __init__.py  conftest.py  test_command_syntax.sh  test_inline_bash.py
tests/hooks/: test_hooks.sh
tests/integration/: __init__.py  test_cli.py
tests/scripts/: test-installer.sh  (+1 more)
(+41 files in other folders)
